Push questionnaire logic